# paperless-api

./: Cargo.toml  README.md
.github/workflows/: ci.yml
paperless-api-macros/: Cargo.toml
paperless-api-macros/src/: derive_base.rs  lib.rs  repr_serde.rs
src/: client.rs  correspondent.rs  custom_field.rs  document.rs  document_query.rs  document_type.rs  dto.rs  group.rs  id.rs  lib.rs  metadata.rs  note.rs  saved_view.rs  share_link.rs  share_link_bundle.rs  storage_path.rs  tag.rs  task.rs  user.rs  util.rs  workflow.rs
src/metadata/: correspondent.rs  custom_field.rs  document_type.rs  permission.rs  storage_path.rs  tag.rs
