[package]
name = "paperless-api"
description = "Async Paperless ngx API client"
license = "MIT"
version = "0.2.1"
repository = "https://github.com/tripplet/paperless-api"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
enumflags2 = "0.7"
futures-util = { version = "0.3" }
reqwest = { version = "0.13", features = ["json", "multipart", "stream", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "2.0"
tokio = { version = "1.50", features = [] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = { version = "0.1" }
