[package]
name = "paperless-api"
description = "Async Paperless ngx API client"
license = "MIT"
version = "0.9.0"
repository = "https://github.com/tripplet/paperless-api"
edition = "2024"

[package.metadata.docs.rs]
features = ["tokio-fs"]

[workspace]
members = ["paperless-api-macros"]

[features]
tokio-fs = ["dep:tokio"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2.1", features = ["display"] }
enum-iterator = "2.3"
enumflags2 = "0.7"
futures-util = { version = "0.3" }
#paperless-api-macros = { path = "paperless-api-macros" }
paperless-api-macros = "=0.9.0"
reqwest = { version = "0.13", features = ["json", "multipart", "stream", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7"
thiserror = "2.0"
tracing = { version = "0.1" }

tokio = { version = "1.50", optional = true, features = ["fs", "io-util"] }
